-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta3
-
None
-
8c5e3f46e (dev), a916ac408 (6.7), 0b6536bcb (6.7.0)
-
DaVinci 95
QDoc compilation fails when using clang 18:
agent:2024/03/07 14:23:13 build.go:404: | In file included from /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.7.0/git/src/qdoc/qdoc/src/qdoc/clangcodeparser.cpp:40: agent:2024/03/07 14:23:13 build.go:404: | /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.7.0/git/src/qdoc/qdoc/src/qdoc/clang/AST/QualTypeNames.h: In function ‘clang::QualType clang::TypeName::getFullyQualifiedType(clang::QualType, const clang::ASTContext&, bool)’: agent:2024/03/07 14:23:13 build.go:404: | /home/qt/work/build/build/tmp/work/x86_64-linux/qttools-native/6.7.0/git/src/qdoc/qdoc/src/qdoc/clang/AST/QualTypeNames.h:441:35: error: ‘ETK_None’ was not declared in this scope; did you mean ‘EST_None’? agent:2024/03/07 14:23:13 build.go:404: | 441 | ElaboratedTypeKeyword Keyword = ETK_None; agent:2024/03/07 14:23:13 build.go:404: | | ^~~~~~~~ agent:2024/03/07 14:23:13 build.go:404: | | EST_None
Changed in https://github.com/llvm/llvm-project/commit/4ad2ada5216ee2bb3c334a3233a9ab51f2521b82
- is duplicated by
-
QTBUG-123453 qttools-native needs patch on meta-qt6/dev
-
- Closed
-
- resulted in
-
QTBUG-123130 QDoc with Clang 18 drops `noexcept` specifier from compiler generated methods documented with \fn
-
- Closed
-